# app-des

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commonapi.ini  vsomeip.json
config/: README.md
exception_handler/: CMakeLists.txt  README.md
exception_handler/config/: commonapi.ini
exception_handler/src/: ToApplicationStubImpl.cpp  ToApplicationStubImpl.hpp  handler.cpp  handler.h  main.cpp
exception_handler/src-gen/v1/commonapi/: BatteryToHandler.hpp  BrakeStatusSomeIPDeployment.cpp  BrakeStatusSomeIPStubAdapter.hpp  GearToHandlerSomeIPDeployment.hpp  GearToHandlerSomeIPStubAdapter.hpp  InputToHandlerSomeIPDeployment.hpp  InputToHandlerStubDefault.hpp  ManeuverProxy.hpp  ManeuverSomeIPDeployment.hpp  ManeuverSomeIPStubAdapter.cpp  SpeedToHandlerProxy.hpp  ToApplication.hpp  ToApplicationSomeIPStubAdapter.cpp  ToApplicationSomeIPStubAdapter.hpp  ToHandlerSomeIPDeployment.cpp
exception_handler/tools/: exception_handler.sh
head_unit/: CMakeCache.txt  CMakeLists.txt  ContentsLayout.qml  GearLayout.qml  MainLayout.qml  MenuLayout.qml  README.md  SearchLayout.qml  ToolbarLayout.qml  YoutubeLayout.qml  head_unit.pro  main.cpp  main.qml  qml.qrc  youtubesearch.cpp  youtubesearch.h
head_unit/apps/Ambient/: Ambient.qml  info.yaml
head_unit/apps/Ambient/qml/: Ambient.qml
head_unit/apps/Youtube/: info.yaml
head_unit/apps/Youtube/qml/: Youtube.qml  YoutubeSearch.qml
head_unit/apps/_Home/: Home.qml  info.yaml
head_unit/apps/_PDC/: info.yaml
head_unit/apps/_PDC/qml/: Graphic.qml  PDC.qml  Video.qml
head_unit/config/: commonapi.ini
head_unit/fidl/: GearStatus.fdepl  HeadUnit.fdepl  HeadUnit.fidl
head_unit/src/: GearSelectorStubImpl.cpp  GearSelectorStubImpl.hpp  GearStatusStubImpl.hpp  HeadUnitImpl.cpp  HeadUnitStubImpl.cpp  HeadUnitStubImpl.hpp  gearservice.cpp  gearservice.h  main.cpp  qml.qrc  vehiclestatus.cpp  vehiclestatus.h  youtubesearch.cpp  youtubesearch.h
head_unit/src-gen/v1/commonapi/: BatteryStatusStub.hpp  BatteryToHandlerSomeIPProxy.cpp  GearToHandlerStub.hpp  GearToHandlerStubDefault.hpp  HeadUnitProxy.hpp  HeadUnitProxyBase.hpp  HeadUnitSomeIPProxy.cpp  HeadUnitSomeIPProxy.hpp  HeadUnitSomeIPStubAdapter.cpp  HeadUnitSomeIPStubAdapter.hpp  HeadUnitStub.hpp  HeadUnitStubDefault.hpp  InputToHandlerSomeIPDeployment.cpp  InputToHandlerSomeIPProxy.hpp  InputToHandlerSomeIPStubAdapter.cpp  TempStatusProxyBase.hpp  TempStatusSomeIPStubAdapter.hpp  ToHandlerSomeIPDeployment.hpp  ToHandlerSomeIPProxy.cpp  ToHandlerSomeIPStubAdapter.cpp
head_unit/src/qml/: AmbientsLayout.qml  ContentsLayout.qml  GearLayout.qml  MainLayout.qml  MenuLayout.qml  SearchLayout.qml  ToolbarLayout.qml  main.qml
head_unit/system-ui/: GearLayout.qml  system-ui.qml
head_unit/tools/: am-config.yaml  head_unit.sh
instrument_cluster/: CMakeLists.txt  README.md
instrument_cluster/config/: commonapi.ini
instrument_cluster/fidl/: VehicleStatus.fdepl  VehicleStatus.fidl
instrument_cluster/src/: gearclient.cpp  gearclient.h  main.cpp  qml.qrc  vehicleclient.cpp  vehicleclient.h
instrument_cluster/src-gen/v1/commonapi/: BatteryToHandlerProxy.hpp  BatteryToHandlerProxyBase.hpp  BrakeStatusStub.hpp  GearStatusProxyBase.hpp  GearStatusSomeIPProxy.cpp  GearStatusSomeIPProxy.hpp  GearStatusSomeIPStubAdapter.hpp  GearStatusStub.hpp  GearStatusStubDefault.hpp  GearToHandler.hpp  GearToHandlerSomeIPDeployment.cpp  InputToHandlerSomeIPStubAdapter.hpp  ManeuverSomeIPProxy.cpp  RacerToHandlerProxy.hpp  SpeedStatusProxy.hpp  SpeedStatusSomeIPProxy.cpp  SpeedStatusStub.hpp  SpeedToHandler.hpp  SpeedToHandlerSomeIPStubAdapter.cpp  SpeedToHandlerSomeIPStubAdapter.hpp  TempStatusSomeIPDeployment.hpp  TempStatusStub.hpp  ToHandlerProxy.hpp  VehicleStatus.hpp  VehicleStatusProxy.hpp  VehicleStatusProxyBase.hpp  VehicleStatusSomeIPDeployment.cpp  VehicleStatusSomeIPDeployment.hpp  VehicleStatusSomeIPProxy.cpp  VehicleStatusSomeIPProxy.hpp  (+4 more)
instrument_cluster/src/qml/: CenterCar.qml  GearSelection.qml  InstrumentCluster.qml  LeftCluster.qml  RightCluster.qml  StatusIndicator.qml  main.qml
instrument_cluster/tools/: instrument_cluster.sh
racer/: CMakeLists.txt  README.md
racer/src/: GearStatusStubImpl.hpp  IncludePython.h  main.cpp  piracer.cpp  racerclient.cpp  racerclient.h
racer/tools/: racer.sh
sender/: CMakeLists.txt
sender/battery/: CMakeLists.txt  README.md
sender/battery/config/: commonapi.ini
sender/battery/src/: BatteryStatusStubImpl.cpp  battery.cpp  main.cpp  piracer.cpp  piracer.h
sender/battery/tools/: battery.sh
sender/can_app/: CMakeLists.txt  README.md
sender/can_app/src/: DistanceStatusStubImpl.cpp  DistanceStatusStubImpl.hpp  SpeedStatusStubImpl.hpp  can_app.cpp  can_app.h  canreceiver.cpp  canreceiver.h  main.cpp
sender/can_app/tools/: can_app.sh
sender/input/: CMakeLists.txt  README.md
sender/input/config/: commonapi.ini
sender/input/src/: BrakeStatusStubImpl.cpp  GearSelectorStubImpl.cpp  GearSelectorStubImpl.hpp  InputStatusStubImpl.cpp  InputStatusStubImpl.hpp  gamepad.cpp  gamepad.h  input.cpp  input.h  main.cpp
sender/input/tools/: input.sh
sender/racer/: CMakeLists.txt
sender/racer/config/: commonapi.ini
sender/racer/src/: GearStatusStubImpl.cpp  RacerStubImpl.cpp  RacerStubImpl.hpp  RacerToHandlerStubImpl.hpp  main.cpp  piracer.cpp  racerclient.cpp  racerclient.h
sender/racer/tools/: racer.sh
sender/speed/: CMakeLists.txt
sender/speed/config/: commonapi.ini
sender/speed/src/: SpeedStatusStubImpl.cpp  canreceiver.h
sender/speed/tools/: speed.sh
sender/src/: battery.cpp  brake.cpp  canreceiver.cpp  canreceiver.h  gamepad.cpp  gamepad.h  main.cpp  piracer.cpp  piracer.h
sender/src/battery/: BatteryStatusStubImpl.hpp  battery.cpp  battery.h  main.cpp
sender/src/handler/: BrakeStatusStubImpl.hpp  gamepad.cpp  gamepad.h  handler.cpp
sender/src/input/: ManeuverStubImpl.cpp  ManeuverStubImpl.hpp  gamepad.cpp  gamepad.h  input.cpp  input.h  main.cpp
sender/src/racer/: RacerToHandlerStubImpl.cpp  main.cpp  racer.cpp  racerclient.cpp  racerclient.h
sender/src/speed/: canreceiver.cpp  main.cpp  speed.cpp  speed.h
(+155 files in other folders)
